Prevent leaderboard tables from overflowing
Commit db56b71 accidentally forced the width of leaderboard tables to
`90vw`, regardless of whether or not it overflows the parent `<main>`
container.

--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -22,7 +22,7 @@ h2 {
 /* Container for both sections */
 .dashboard-container {
     margin: 0 auto;
-    width: 90vw;
+    max-width: 90vw;
 
     display: flex;
     flex-wrap: wrap;
